seo link visibility issue on horizontal card

--- a/src/app/modules/product-horizontal-card/product-horizontal-card.component.scss
+++ b/src/app/modules/product-horizontal-card/product-horizontal-card.component.scss
@@ -309,6 +309,7 @@
 }
 .seo-hidden-link{
     pointer-events: none;
-    position: absolute;
-    z-index: -1;
+    opacity:0;
+    height:0px;
+    display:block;
 }
